--- a/index_pc.html
+++ b/index_pc.html
@@ -41,7 +41,7 @@
       id: 'deckgl-PointCloudLayer',
       type: PointCloudLayer,
 //REPLACE THIS WITH THE URL OF THE FILE
-      data: 'https://markus7777777.github.io/Mapbox/array.json',
+      data: 'https://markus7777777.github.io/Mapbox/adjusted_array.json',
       getPosition: d => [d[0], d[1], d[2]],
       getColor: d => [d[3], d[4], d[5]],
       sizeUnits: 'meters',
